升級版本以及添加 JPAStream 作为查询工具